@@ -2,6 +2,7 @@
     - Fixed a bug in the IEEEXploreFetcher
     - Added more characters to HTML/Unicode converter
     - Feature: Push citations to Texmaker (SF: #318, #582)
+	- Case changers improved to honor words (not yet more than single words) within {}
     - Feature: Add an option to the FileList context menu to delete an associated file from the file system
     - Breaking API change: String[] is replaced by List<String> in BibtexEntryType
     - Feature: Field names "Doi", "Ee", and "Url" are now written as "DOI", "EE", and "URL"
